bynkc/tests/fixtures/positive/813_messages_icu_number_styles/src/app/bundle.bynk
commons app.bundle

uses bynk.locale

---
message-bundles slice 3 (#878): `number` placeholders, bare (default
decimal) and both fixed styles (`integer`, `percent`) — all delegated to
the host `Intl.NumberFormat`.
---
messages en @reference {
  "price" => "{n, number}"
  "quantity" => "{n, number, integer}"
  "discount" => "{n, number, percent}"
}
