bynkc/tests/fixtures/negative/490_messages_malformed_icu_unknown_keyword/src/bundle.bynk
commons bundle

uses bynk.locale

messages en @reference {
  "duration" => "{d, duration}"
}
